Tim - Reduced code; started booking area basic just to illustrate how easy it is to expand site to include more "pages".

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 /* Tim : Without this focusBody will not be visable*/
-#focusBody {
+#mainContent {
   text-align: center;
   background-color: #dc3545;
   color: #fff;
