Rounded all the pics in the testimonial
set all pics an #id and set all pics' id's to border-radius: 50%;

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -9,6 +9,7 @@ body {
   font-weight: bold;
   font-family: 'Montserrat', sans-serif;
 }
+
 .nav-item {
   padding: 0 18px;
 }
@@ -52,4 +53,17 @@ h2 {
 /* Carousel (testimonials) padding*/
 .carousel-item {
   padding: 5% 10%;
+}
+
+#anton-pic {
+  border-radius: 50%;
+}
+#sara-pic {
+  border-radius: 50%;
+}
+#gustav-pic {
+  border-radius: 50%;
+}
+#tim-pic {
+  border-radius: 50%;
 }
