--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -25,6 +25,7 @@ body {
   background-image: url('/images/1552.jpg');
   background-color: #cccccc;
   background-size: cover;
+  background-position: center;
 }
 
 /* H1 and H2*/
