--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -87,3 +87,14 @@ h2 {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
+
+#biljetten{
+  margin-top: 1rem;
+  width: 60%;
+  height: 23rem;
+  border-radius: 15px;
+  border: 15px double rgb(143, 22, 28);
+
+}
+
+
