--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -77,8 +77,9 @@ h2 {
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
+  margin: auto;
 }
-.row {
+.movierow {
   display: flex;
   justify-content: center;
 }
