--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -26,6 +26,10 @@ h2 {
   padding: 0 18px;
 }
 
+#navbarNav{
+  margin-left: -17.5rem;
+}
+
 /* Padding for the container */
 .container {
   padding: 3% 5%;
