--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -17,6 +17,7 @@ h2 {
 
 /* Navigation Bar */
 .navbar-brand {
+  position: relative;
   font-size: 2rem;
   font-weight: bold;
   font-family: 'Montserrat', sans-serif;
@@ -27,7 +28,7 @@ h2 {
 }
 
 #navbarNav{
-  margin-left: -12rem;
+  margin-left: -16.5rem;
 }
 
 /* Padding for the container */
